--- a/assets/css/templatemo-grad-school.css
+++ b/assets/css/templatemo-grad-school.css
@@ -797,7 +797,7 @@ section.courses {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #172238;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   padding: 0px 30px 100px 30px;
 }
 
@@ -883,7 +883,7 @@ section.video {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #172238;
-  padding: 150px 0px 130px 0px;
+  padding: 200px 0px 130px 0px;
 }
 
 section.video .left-content {
