edit more to Arabic

--- a/assets/css/templatemo-grad-school.css
+++ b/assets/css/templatemo-grad-school.css
@@ -8,7 +8,7 @@ https://templatemo.com/tm-557-grad-school
 
 
 @import url(fontawesome.css);
-@import url("<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900');
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -537,7 +537,7 @@ section.why-us {
 }
 #tabs ul li a {
   display: block;
-  font-size: 13px;
+  font-size: 16px;
   font-weight: 700;
   letter-spacing: 1px;
   cursor: pointer;
